# pykalman

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG  CHANGELOG.md  COPYING  LICENSE  MANIFEST.in  Makefile  README  README.markdown  README.md  em_example.py  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  doc_improvement.md  feature_request.md
.github/actions/test-pull/: action.yml
.github/workflows/: release.yml  run-ci.yml  test.yml
build_tools/: fail_on_missing_init_files.sh
doc/: Makefile  class_docs.rst  conf.py  index.rst  users_guide.rst
doc/source/: class_docs.rst  conf.py  index.rst  kf_users_guide.rst  numerical_stability.rst  plot_em.ipynb  plot_filter.ipynb  plot_missing.ipynb  plot_online.ipynb  sine_wave.ipynb  ukf_users_guide.rst  unscented_kalman_filter.ipynb  unscented_kalman_filter_and_smoother.ipynb  users_guide.rst
examples/: pykalman_multivariate_example.ipynb  pykalman_rolling_window_example.ipynb
examples/standard/: plot_em.py  plot_filter.ipynb  plot_filter.py  plot_missing.py  plot_online.py  plot_sin.py
examples/standard/notebooks/: plot_em.ipynb
examples/unscented/: plot_additive.py  plot_filter.py
kalman/: __init__.py  standard.py  unscented.py  utils.py
kalman/datasets/: base.py
kalman/tests/: test_standard.py  test_unscented.py
pykalman/: __init__.py  _nopytest_tests.py  spectral.py  standard.py  unscented.py  utils.py  utils_numpy.py
pykalman/sqrt/: __init__.py  bierman.py  cholesky.py  standard.py  unscented.py
pykalman/sqrt/tests/: test_bierman.py  test_cholesky.py  test_standard.py  test_unscented.py
pykalman/tests/: test_loglikelihood.py  test_standard.py  test_unscented.py
pykalman/utils/: __init__.py
