[project]
name = "pykalman"
version = "0.10.0"
description = "An implementation of the Kalman Filter, Kalman Smoother, and EM algorithm in Python"
maintainers = [
    {name = "pykalman developers", email = "info@sktime.net"}
]
authors = [
    {name = "Daniel Duckworth"},
    {name = "Maksym Balatsko", email = "mbalatsko@gmail.com"},
    {name = "pykalman developers", email = "info@sktime.net"}
]
readme = "README.md"
keywords = [
    "kalman filter",
    "smoothing",
    "filter",
    "smoothing",
    "em",
    "expectation-maximization",
    "hmm",
    "tracking",
    "unscented",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "numpy<3",
    "scikit-base<0.13.0",
    "scipy<2.0.0",
]

[project.optional-dependencies]

tests = [
    "pytest"
]

dev = [
    "pytest",
    "pre-commit"
]

docs = [
    "jupyter",
    "Sphinx<9.0.0",
    "numpydoc"
]

all = [
    "jupyter",
    "pytest",
    "Sphinx<9.0.0",
    "numpydoc",
    "twine",
    "pre-commit"
]

[project.urls]
Homepage = "https://github.com/pykalman/pykalman"
Repository = "https://github.com/pykalman/pykalman"
Documentation = "https://pykalman.github.io/"
Download = "https://pypi.org/project/pykalman/"

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools>61", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.package-data]
pykalman = [
    "datasets/descr/robot.rst",
    "datasets/data/robot.mat"
]

[tool.setuptools.packages.find]
exclude = ["pykalman.tests", "pykalman.sqrt.tests"]
